<?xml version="1.0" encoding="utf-8"?>
<!-- Author: James Luo -->
<!-- Last Modified: 11/25/2014 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mathproblemconstructor.Menu" >
    <TextView
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/appName"
        android:textSize="60sp" />
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/selectGrade"
        android:textSize="48sp" />
    <RadioGroup
        android:id="@+id/rg"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content" >
        <RadioButton
            android:id="@+id/gradek"
            android:checked="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/gradeK"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/grade1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/grade1"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/grade2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/grade2"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/grade3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/grade3"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/grade4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/grade4"
            android:textSize="24sp" />
        <RadioButton
            android:id="@+id/grade5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/grade5"
            android:textSize="24sp" />
    </RadioGroup>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menuNumPrompt"
        android:textSize="48sp" />
    <EditText
        android:id="@+id/et"
        android:hint="@string/menuETHint"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="15" />
    <Button
        android:id="@+id/button"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menuButton"
        android:textSize="48sp" />
</LinearLayout>