<?xml version="1.0" encoding="utf-8"?>
<!-- Author: James Luo -->
<!-- Last Modified: 11/25/2014 -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mathproblemconstructor.Math" >
    <TextView
        android:id="@+id/num"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="#0000ff"
        android:textSize="100sp" />
    <TextView
        android:id="@+id/problem"
        android:layout_toRightOf="@id/num"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="100sp" />
    <Button
        android:id="@+id/menu"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/menu" />
    <Button
        android:id="@+id/previous"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@id/menu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mathPrev" />
    <Button
        android:id="@+id/next"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/menu"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mathNext" />
    <Button
        android:id="@+id/submit"
        android:layout_above="@id/menu"
        android:layout_alignParentRight="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mathSubmit" />
    <EditText
        android:id="@+id/userResponse"
        android:hint="@string/mathResponseHint"
        android:inputType="number"
        android:layout_above="@id/menu"
        android:layout_toLeftOf="@id/submit"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:singleLine="true" />
    <TextView
        android:id="@+id/correct"
        android:layout_above="@id/menu"
        android:layout_toLeftOf="@id/userResponse"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mathCorrect" />
    <TextView
        android:id="@+id/wrong"
        android:layout_above="@id/menu"
        android:layout_toLeftOf="@id/userResponse"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/mathWrong" />
</RelativeLayout>